--- a/public/test.html
+++ b/public/test.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Test</title>
-	</head>
-	<body>
-		<h1>
-			Test!!
-		</h1>
-		<p>
-		</p>
-		<a href="./">Back to Index</a>
-	</body>
+    <head>
+        <meta charset="utf8">
+        <title>Lab Entrance - Test</title>
+        <link rel="stylesheet" href="./css/normalize.css" />
+        <link rel="stylesheet" href="./css/grid.css" />
+        <link rel="stylesheet" href="./css/animations.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
+    </head>
+    <body>
+        <h1>
+            Test!!
+        </h1>
+        <p>
+            This is a test, only a test. Yes, a test.
+        </p>
+        <a href="./">Back to Index</a>
+
+        <script src="./js/vendor/jquery-1.9.1.js"></script>
+        <script src="./js/vendor/mustache.js"></script>
+        <script src="./js/vendor/prototype-1.7.1.js"></script>
+        <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+        <script src="./js/main_client.js"></script>
+    </body>
 </html>
