--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Test</title>
-	</head>
-	<body>
-		<h1>
-			Boouh !
-		</h1>
-		<p>
-			It is working !
-		</p>
-		<a href="./test.html">Ready for a test?</a>
-	</body>
+    <head>
+        <meta charset="utf8">
+        <title>Lab Entrance - Index</title>
+        <link rel="stylesheet" href="./css/normalize.css" />
+        <link rel="stylesheet" href="./css/grid.css" />
+        <link rel="stylesheet" href="./css/animations.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
+    </head>
+    <body>
+        <h1>
+         Boouh !
+        </h1>
+        <p id="receiver">
+        </p>
+        <a href="./test.html">Ready for a test?</a>
+
+        <script src="./js/vendor/jquery-1.9.1.js"></script>
+        <script src="./js/vendor/mustache.js"></script>
+        <script src="./js/vendor/prototype-1.7.1.js"></script>
+        <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+        <script src="./js/main_client.js"></script>
+    </body>
 </html>
