--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,88 @@
         <link rel="stylesheet" href="./css/animations.css" />
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
-    <body>
-        <h1>
-         Boouh !
-        </h1>
-        <p id="receiver">
-        </p>
-        <a href="./test.html">Ready for a test?</a>
+    <body class="container_12">
 
+
+        <div class="grid_2 zone_contenu">
+            <div id="contenu">
+                <h2>Menu</h2>
+                <div id='nav'>
+                    <ul>
+                        <!--<li><a href='#'>Créer partie</a></li>
+                        <li><a href='#'>Rejoindre partie</a></li>
+                        <li><a href='#'>Observer partie</a></li>
+                        <li><a href='#'>Quitter</a></li>
+                        <li>
+                            <input type="submit" id="send" value="QUITTER" class="submit"/>
+                        </li>-->
+                    </ul>
+                </div>
+            </div>
+            <div class="clear"></div>
+            <div id="footer">
+                <p>
+                    Bonjour.
+                </p>
+            </div>
+            <div class="clear"></div>
+        </div>
+
+
+        <div class="grid_8" id="chat_container">
+            <div>
+                <h2>Chat</h2>
+            </div>
+            <div class="clear"></div>
+            <div id="chat_output">
+                <div id="messages">
+                    <div class="message" id="msgtpl" style="display:none;">
+                        <div class="info">
+                            <div>
+                                <p class="output_messages">
+                                    <span class="date">{{h}}:{{m}}</span>
+                                    <strong>{{user.username}}</strong>
+                                    {{message}}
+                                </p>
+                            </div>
+                            <div class="clear"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="chat_input">
+                <form action="" id="form">
+                    <input type="text" id="message" class="text" />
+                    <input type="submit" id="send" value="ENVOYER" class="submit"/>
+                </form>
+            </div>
+        </div>
+
+
+        <div class="grid_2 zone_contenu">
+            <h2>En ligne</h2>
+            <div id="users">
+            </div>
+        </div>
+        
+        <div class="clear"></div>
+
+<!-- Login screen -->
+        <div id="login">
+            <form action="" id="loginform">
+                <p>
+                    <strong>Connexion</strong>
+                    <br \> Entrez votre pseudo :
+                </p>
+                <input type="text" name="login" id="username" placeholder="Nom d'utilisateur" />
+                <input type="submit" value="Connexion" />
+            </form>
+        </div>
+
+<!-- Main cache -->
+        <div id="cacheAll"></div>
+
+<!-- Scripts -->
         <script src="./js/vendor/jquery-1.9.1.js"></script>
         <script src="./js/vendor/mustache.js"></script>
         <script src="./js/vendor/prototype-1.7.1.js"></script>
