--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./css/grid.css" />
         <link rel="stylesheet" href="./css/animations.css" />
         <link rel="stylesheet" href="./css/styles.css" />
+
     </head>
     <body class="container_12">
 
@@ -16,13 +17,10 @@
                 <h2>Menu</h2>
                 <div id='nav'>
                     <ul>
-                        <!--<li><a href='#'>Créer partie</a></li>
+                        <li><a href='#'>Créer partie</a></li>
                         <li><a href='#'>Rejoindre partie</a></li>
                         <li><a href='#'>Observer partie</a></li>
                         <li><a href='#'>Quitter</a></li>
-                        <li>
-                            <input type="submit" id="send" value="QUITTER" class="submit"/>
-                        </li>-->
                     </ul>
                 </div>
             </div>
@@ -88,11 +86,11 @@
 
 <!-- Main cache -->
         <div id="cacheAll"></div>
-
 <!-- Scripts -->
         <script src="./js/vendor/jquery-1.9.1.js"></script>
         <script src="./js/vendor/mustache.js"></script>
         <script src="./js/vendor/prototype-1.7.1.js"></script>
+        <script src="./js/vendor/angular-1.0.7.min.js"></script>
         <script src="http://localhost:3000/socket.io/socket.io.js"></script>
         <script src="./js/main_client.js"></script>
     </body>
